--- a/style.css
+++ b/style.css
@@ -9,12 +9,37 @@ body{
     align-items: center;
 }
 
-output{
+h1, h2, h3, h4, h5, h6 {
+    font-family: Arial, Helvetica, sans-serif;
+}
+
+aside{
     position: fixed;
     right: 10px;
     top: 10px;
+
+    width: 250px;
+    
+}
+
+aside > *{
     padding: 10px;
     background: rgb(200,200,200);
     border: 1px solid rgb(180,180,180);
+    display: block;
+}
+
+output{
     font-family: monospace;
+    margin-bottom: 4px;
+}
+
+aside>div{
+    opacity: 0.3;
+    transition: opacity 150ms ease-in;
+}
+
+aside>div:hover{
+    transition: opacity 50ms ease-in;
+    opacity: 1;
 }
