--- a/style.css
+++ b/style.css
@@ -24,8 +24,8 @@ aside{
 
 aside > *{
     padding: 10px;
-    background: rgb(200,200,200);
-    border: 1px solid rgb(180,180,180);
+    background: hsl(0, 0%, 94.9%);
+    border: 1px solid hsl(0, 0%, 70.6%);
     display: block;
 }
 
