--- a/style.css
+++ b/style.css
@@ -18,11 +18,14 @@ aside{
     right: 10px;
     top: 10px;
 
-    width: 250px;
-    
+    width: 250px;   
 }
 
-aside > *{
+aside>:not(:last-child), #color-definer-options>:not(:last-child){
+    margin-bottom: 4px;
+}
+
+aside > :not(#color-definer-options){
     padding: 10px;
     background: hsl(0, 0%, 94.9%);
     border: 1px solid hsl(0, 0%, 70.6%);
@@ -31,15 +34,59 @@ aside > *{
 
 output{
     font-family: monospace;
-    margin-bottom: 4px;
 }
 
-aside>div{
+#project-description{
     opacity: 0.3;
     transition: opacity 150ms ease-in;
 }
 
-aside>div:hover{
+#project-description:hover{
     transition: opacity 50ms ease-in;
     opacity: 1;
+}
+
+#color-definer-options>*{
+    display: flex;
+    justify-items: stretch;
+    height: 40px;
+    font-family: Arial, Helvetica, sans-serif;
+}
+
+#color-definer-options>*>*{
+    background: hsl(0, 0%, 94.9%);
+    border: 1px solid hsl(0, 0%, 70.6%);
+    display: flex;
+    align-items: center;
+    padding: 0px 7px;
+
+    font-size: 1.2em;
+    cursor: pointer;
+}
+
+#color-definer-options>.active{
+    opacity: 1;
+}
+
+#color-definer-options>*{
+    opacity: 0.3;
+}
+
+#color-definer-options>*:not(.active):hover{
+    opacity: 0.6;
+}
+
+#color-definer-options>*:active{
+    opacity: 0.5;
+}
+
+#color-definer-options>*>:nth-child(1){
+    border-right: none;
+    width: 40px;
+    box-sizing: border-box;
+    justify-content: center;
+}
+
+#color-definer-options>*>:nth-child(2){
+    flex-grow: 1;
 }
